--- a/Project/frontend/package.json
+++ b/Project/frontend/package.json
@@ -6,6 +6,9 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.5",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -13,6 +16,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.62.0",
     "shortid": "^2.2.16",
+    "sweetalert2": "^11.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,4 +44,3 @@
     ]
   }
 }
-
