--- a/Project/frontend/package.json
+++ b/Project/frontend/package.json
@@ -20,6 +20,7 @@
     "react-select": "^5.7.2",
     "recharts": "^2.5.0",
     "sass": "^1.62.0",
+    "styled-components": "^5.3.9",
     "sweetalert2": "^11.7.3",
     "web-vitals": "^2.1.4"
   },
