--- a/Project/frontend/package.json
+++ b/Project/frontend/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.62.0",
     "shortid": "^2.2.16",
+    "sweetalert2": "^11.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
