--- a/Project/backend/package.json
+++ b/Project/backend/package.json
@@ -19,6 +19,8 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
+    "pdfkit": "^0.13.0",
+    "pdfmake": "^0.2.7",
     "stripe": "^12.0.0"
   },
   "devDependencies": {
