--- a/Project/frontend/package.json
+++ b/Project/frontend/package.json
@@ -9,11 +9,13 @@
     "axios": "^1.3.5",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
+    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.2",
     "sass": "^1.62.0",
     "shortid": "^2.2.16",
     "sweetalert2": "^11.7.3",
