--- a/Project/backend/package.json
+++ b/Project/backend/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^7.0.3",
     "pdfkit": "^0.13.0",
     "pdfmake": "^0.2.7",
+    "puppeteer": "^19.11.0",
     "stripe": "^12.0.0"
   },
   "devDependencies": {
